correction style, alignement texte colonne et resize image

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    text-align: center;
 }
 
 .frontLogo {
@@ -91,6 +92,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    text-align: center;
 }
 
 .back img {
