--- a/styleHeaderFooter.css
+++ b/styleHeaderFooter.css
@@ -85,6 +85,7 @@ footer h2 {
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    text-align: center;
 }
 
 #email {
@@ -92,6 +93,7 @@ footer h2 {
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    text-align: center;
 }
 
 
